# tsshmm

./: .Rbuildignore  .gitignore  .gitlab-ci.yml  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md  aclocal.m4  cleanup  configure  configure.ac  libtool
R/: TSSHMM-class.R  data.R  hmm.R  tsshmm-package.R  viterbi.R
data/: core2014.rda
data-raw/: README.md  core2014.R
inst/: REFERENCES.bib
inst/script/: core2014.R
inst/testdata/: parameters_model_groseq.rda
man/: TSSHMM-class.Rd  as.character-TSSHMM-method.Rd  coerce.Rd  core2014.Rd  hmm.Rd  reexports.Rd  sprint_precision_or_na_spaces.Rd  tss.Rd
src/: .dir-locals.el  Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  Makevars  Makevars.in  R_init_tsshmm.c  R_wrap_tsshmm.c  R_wrap_tsshmm.h  ghmm_internals.h  mes.h  model.h  model_read.c  model_read.h  models.c  models.h  parameters.c  parameters.h  simulate.c  simulate.h  train.c  train.h  train_ghmm_normalize_patch.c  train_ghmm_normalize_patch.h  tss.c  tss.h  viterbi.c  viterbi.h
src/ghmm-0.9-rc3/: Makefile.in  configure
src/ghmm-0.9-rc3/HMMEd/: Makefile.in
src/ghmm-0.9-rc3/ghmm/: Makefile.in
src/ghmm-0.9-rc3/ghmmwrapper/: Makefile.in
src/ghmm-0.9-rc3/tests/: Makefile.in
src/ghmm-0.9-rc3/tests/data/: Makefile.in
src/ghmm-0.9-rc3/tools/: Makefile.in
tests/: testthat.R
tests/testthat/: helper-hmm.R  test-create_batches.R  test-encode.R  test-encode_obs.R  test-hmm.R  test-model.R  test-parameters.R  test-prom_dist.R  test-scoreOverlaps.R  test-train.R  test-tss.R  test-validate_reads.R  test-viterbi.R  test-viterbi_low_level.R
tools/: autogen.sh  ci_r_setup.bash  m4_ax_subdirs_configure.m4
vignettes/: refs.bib  tsshmm-userguide.Rmd
